# Scrython

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  ANALYSIS.md  API_CHECKLIST.md  Autocomplete.md  CHANGELOG.md  CLAUDE.md  Changelog.md  Contributing.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  LICENSE  PHASE_8_PLAN.md  README.md  REFACTOR_SUMMARY.md  __init__.py  discord_bot.py  gen_docs.py  getter.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.md  test.py
.github/workflows/: python-publish.yml  tests.yml
cards/: __init__.py  autocomplete.py  cardid.py  cards_autocomplete.py  cards_named.py  collector.py  id.py  mtgo.py  multiverse.py  named.py  randomcard.py  scryfall_object.py
docs/: Cards.md  Cards_Classes.md  Catalog.md  Rulings.md  Rulings_Classes.md  Scrython.md  Sets.md  Symbology.md
docs/rewrite/: COMPLETE_API_PLAN.md  PHASE_8_COMPLETE.md  README.md  REFACTOR_PLAN.md  REWRITE_HISTORY.md
docs/scrython.bulk_data/: BulkData.md
docs/scrython.cards/: ArenaId.md  Autocomplete.md  Collector.md  Id.md  Mtgo.md  Multiverse.md  Named.md  Random.md  Search.md
docs/scrython.catalog/: AbilityWords.md  ArtifactTypes.md  ArtistNames.md  CardNames.md  CreatureTypes.md  EnchantmentTypes.md  KeywordAbilities.md  KeywordActions.md  LandTypes.md  Loyalties.md  PlaneswalkerTypes.md  Powers.md  SpellTypes.md  Toughnesses.md  Watermarks.md  WordBank.md
docs/scrython.rulings/: Code.md  Id.md  Mtgo.md  Multiverse.md
docs/scrython.sets/: Code.md  Sets.md
docs/scrython.symbology/: ParseMana.md  Symbology.md
examples/: card_autocorrect.py  card_editions.py  check_collection.py  discord_bot.py  download_images_by_set.py  get_all_tokens.py  get_and_format_card.py  handle_errors.py  lookup_set_code.py  spoiler_season.py
objects/: card_by_name.py
rulings/: __init__.py  mtgo.py  multiverse_id.py  rulings_object.py  scryfall_id.py  set_code.py
scrython/: __init__.py  base.py  base_mixins.py  cache.py  foundation.py  rate_limiter.py  types.py  utils.py
scrython/bulk_data/: __init__.py  bulk_data.py  bulk_data_mixins.py
scrython/cards/: __init__.py  arena_id.py  autocomplete.py  cardid.py  cards.py  cards_mixins.py  cards_object.py  collector.py  mtgo.py  multiverse.py  named.py  randomcard.py  scryfall_object.py  search.py  tcgplayer_id.py
scrython/catalog/: __init__.py  ability_words.py  artifact_types.py  artist_names.py  card_names.py  catalogs_object.py  creature_types.py  enchantment_types.py  keyword_abilities.py  keyword_actions.py  land_types.py  loyalties.py  planeswalker_types.py  powers.py  spell_types.py  toughnesses.py  watermarks.py  word_bank.py
scrython/catalogs/: __init__.py  catalogs.py
scrython/docs/: Rulings.md  Rulings_Classes.md
scrython/migrations/: __init__.py  migrations.py  migrations_mixins.py
scrython/rulings/: __init__.py  arena.py  mtgo.py  multiverse_id.py  rulings.py  rulings_mixins.py  rulings_object.py  scryfall_id.py  set_code.py
scrython/sets/: __init__.py  code.py  sets.py  sets_mixins.py  sets_object.py
scrython/symbology/: __init__.py  parse_mana.py  symbology.py  symbology_mixins.py  (+1 more)
tests/: __init__.py  cards_unit_test.py  conftest.py  garbage  test_base.py  test_bulk_data.py  test_caching.py  test_cards.py  test_catalogs.py  test_convenience.py  test_iteration.py  test_magic_methods.py  test_migrations.py  test_property_types.py  test_rate_limiting.py  test_rulings.py  test_serialization.py  test_sets.py  test_symbology.py
unittests/: TestBulk.py  TestCards.py  TestCatalog.py  TestRulings.py  TestSets.py  TestSymbology.py  test_bulk.py  test_cards.py  test_catalog.py  test_rulings.py  test_sets.py  test_symbology.py
(+18 files in other folders)
